# anomaly-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
anomaly_detection/core/: data_utils.py  features.py  models.py
notebooks/: exploration_day1.ipynb  features_exploration.ipynb
