[project]
dependencies = [
    "matplotlib >= 3.6",
    "numpy >= 1.26, < 2.0",
    "pandas",


]
name = "anomaly-detection"
dynamic = ["version", "readme"]
description = "anomaly-detection"
license = { text = "Other/Proprietary License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = "~=3.11"

[[project.authors]]
name = "Niki Gallou"
email = "niki.gallou@cern.ch"

[project.urls]
homepage = "https://github.com/ng-ngallou/anomaly-detection"
repository = "https://github.com/ng-ngallou/anomaly-detection"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = ["acc-py-sphinx", "myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy", "black", "autotyping"]

[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "anomaly_detection/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["."]
include = ["anomaly_detection*"]
namespaces = false

[tool.setuptools.package-data]
anomaly_detection = ["py.typed"]

[project.scripts]
# project endpoints here

# include black configuration for easy to use with VSCode and PyCharm
# autoformatter
# For pre-commit, only ruff is used.
[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]

line-length = 88         # black and ruff default
target-version = "py311"

[tool.ruff.lint]
# All rules can be found here: https://docs.astral.sh/ruff/rules/
select = [
    "F",   # pyflakes
    "E",   # error  (pycodestyle)
    "W",   # warning (pycodestyle)
    "I",   # isort
    "N",   # naming  (pep8)
    "UP",  # pyupgrade
    "PLC", # convention  (pylint)
    "PLE", # error  (pylint)
    "PLW", # warning  (pylint)
    "PLR", # refactor  (pylint)
    # "D",  # docstring (pydocstyle),  # not enabled by default
    "PD",   # pandas
    "TRY",  # tryceratops
    "NPY",  # numpy
    "PERF", # perflint
    "RUF",  # ruff
    # v flake8 v
    "B",
    "C4",
    "FBT",
    "A",
    "EM",
    "ISC",
    "FA",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
]
fixable = ["ALL"]
ignore = ["E501", "W505", "ISC001", "G004", "N806", "N803", "PLR0913", "FBT001", "PD901", "E701", "N801", "PT011",
          "TRY003", "PLR2004", "PLR0915", "N802", "EM102", "EM101", "N816", "C408", "N811", "A001", "RUF005", "N815", "N999"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
disallow_untyped_defs = true
disable_error_code = ["has-type", "assignment", "attr-defined", "index", "name-defined"]

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

# for pyright LSP
[tool.pyright]
reportPrivateImportUsage = "none"

[tool.monkeytype]
# Set the code package to analyze (adjust accordingly)
package_name = "anomaly_detection"
# Specify a filter to only collect types for your code
include = ["anomaly_detection.*"]
# Ignore third-party dependencies
exclude = ["venv.*", "site-packages.*"]
